--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,12 @@
 <h1> Book: <%= @book.title %> </h1>
 <h3> Genre: <%= @book.genre %> </h3>
 <h3> Library: <%= @book.library.name %> </h3>
+
 <h3> Authors: </h3>
 <div id="authors">
 <% @book.author_names.each do |name| %> 
   <p><%= name %></p>
 <% end %>
 </div>
+
+<h3> Average Author Age: <%= @book.average_author_age %> </h3>
