feat: libraries#show has a list of the top 3 authors by book count

--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,3 +1,9 @@
 <h1> Library: <%= @library.name %> </h1>
 
 <%= link_to "All Authors", "/libraries/#{@library.id}/authors" %>
+
+<div id="top_3_authors">
+<% @library.top_3_authors.each do |author| %>
+  <p> <%= author.name %> </p>
+<% end %>
+</div>
