Feat: pass feature tests for books#show page average age of authors - NEEDS REFACTOR

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,3 +5,4 @@
   <p><%= author.name %></p>
 <% end %>
 <h3>Library: <%= @book.library.name %></h3>
+<p>Average Age of the Authors of <%= @book.title %>: <%= @book.average_age_of_authors %></p>
