Refactor: add resources syntax for library routes

--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -3,4 +3,4 @@
 
 <h4>Library Name: <%= @library.name%></h4><br>
 
-<%= link_to 'See All Authors Featured Here', "/libraries/#{@library.id}/authors" %> 
+<%= link_to 'See All Authors Featured Here', "/libraries/#{@library.id}/library_authors" %> 
