ModelTest: create tests for Libraries model .most_popular_authors instance method

--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,3 +1,7 @@
 <%= @library.name %>
 
 <%= link_to "Authors at This Library", "#{@library.id}/authors" %>
+
+<div id="most_popular_authors">
+
+</div>
