Refactor routes so that library ids are attached to authors

--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,1 +1,5 @@
 <h1><%= @library.name %></h1>
+
+<div id="authors">
+  <%= link_to "Authors available at #{@library.name}", "/libraries/#{@library.id}/authors" %>
+</div>
