--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,9 @@
-<h1><%= @book.name %></h1>
+<h1><%= @book.title %></h1>
 Genre: <%= @book.genre%>
+<br>
+<h3>Authors:</h3>
+<ul>
+  <% @book.authors.each do |author| %>
+    <li><%= author.name %></li>
+  <% end %>
+</ul>
