--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -3,3 +3,9 @@
 <div id="authors">
   <%= link_to "Authors available at #{@library.name}", "/libraries/#{@library.id}/authors" %>
 </div>
+
+<div id="three_most_popular_authors">
+  <% @library.three_most_popular_authors.each do |author| %>
+  <%= author.name %>
+  <% end %>
+</div>
