--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,4 +7,5 @@ Genre: <%= @book.genre%>
     <li><%= author.name %></li>
   <% end %>
 </ul>
-@book.average_author_age
+Authors Average Age
+<%= @book.average_author_age %>
