feature:library authors index link links to authors index

--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,2 +1,2 @@
 <h1><%= @library.name %></h1>
-<%=link_to("This Library's Authors", @library_authors) %>
+<%=link_to("This Library's Authors", "/libraries/#{@library.id}/authors") %>
