Test: Library show page lists library name

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,3 +13,5 @@
 </div>
 
 <h2 id="library">Library: <%= @book.library.name %></h2>
+
+<h2>Average Age of Authors: <%= @book.avg_authors_age %></h2>
