Feat: Library show page lists three most popular authors

--- a/app/views/library_authors/index.html.erb
+++ b/app/views/library_authors/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Authors At <%= @library.name %></h2>
 <ul>
-  <% @library.authors.each do |author| %>
+  <% @library.authors.distinct.each do |author| %>
     <li> <%= author.name %></li>
   <% end %>
 </ul>
