--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,3 +1,12 @@
 <h1><%= @library.name %></h1>
 
 <h2><%= link_to "Authors At This Library", "/libraries/#{@library.id}/authors", method: :get %></h2>
+
+<div id="popular_authors">
+  <h2>Three Most Popular Authors At This Library:</h2>
+  <ul>
+    <% @library.three_most_popular_authors.each do |author| %>
+      <li><%= author.name %></li>
+    <% end %>
+  </ul>
+</div>
