--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,8 @@
 <h3><%= "Title: #{@book.title}" %></h3>
 <h3><%= "Genre #{@book.genre}" %></h3>
 <h3>Authors:</h3>
-  <% @book.authors_books.each do |author_book| %>
-    <h4><%= "--#{author_book.author.name}" %></h4>
+  <% @book.authors.each do |author| %>
+    <h4><%= "--#{author.name}" %></h4>
   <% end %>
+<h3>Authors Average Age: <%= @book.authors.average_age.round(0) %></h3>
 <h3><%= "Library: #{@library.name}" %></h3>
