Feat: book show displays the average age of the authors

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,3 +5,4 @@
 <h3><%= author.name %></h3>
 <% end %>
 <p>Found in: <%= @book.library.name %></p>
+<p>Average Age of Authors: <%= @book.authors.avg_age %></p>
