Test: book.average_age_of_authors instance method

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,4 +6,6 @@
   <p><%= author.name %></p>
 <% end %><br>
 
+<p>Average age of authors: <%= @book.average_age_of_authors %></p>
+
 <p>Can be found in: <%= @book.library.name %></p>
