Change birth year to integer

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,3 +5,4 @@
 <% @book.authors.each do |author| %>
 <p> <%= author.name %></p>
 <% end %>
+<p>Authors Average Age: <%= @book.authors.average_age %></p>
