feat: book#show avg_auth_age

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,5 +8,6 @@
   <% end %>
 </div>
 <div class="library">
-<h3>Library: <%= @book.library.name %></h3>
+  <h3>Library: <%= @book.library.name %></h3>
 </div>
+<h3> Average Age of Authors: <%= @book.avg_auth_age %></h3>
