--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,11 +3,13 @@
 
 
 <section id="authors">
-  <<h2><b>Authors</b></h2>
+  <h2>Genre: </h2><%= "#{@book.genre}" %>
+  <h2>Location: </h2><%= "#{@book.library.name}" %>
+  <<h2>Authors</h2>
   <% @book.authors_name.each do |author| %>
   <h3> <%= author %> </h3><br>
   <% end %>
-
-  <h2>Genre: </h2><%= "#{@book.genre}" %>
-  <h2>Location: </h2><%= "#{@book.library.name}" %>
+<section id="averageage"
+<h2>Average age of authors: <%= "#{@book.average_author_age}" %>
+  </section>
   </section>
