Story_1 final commit

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,3 +2,8 @@
 <h1>Title: <%= @book.title %></h1>
 <h2>Genre: <%= @book.genre %></h2>
 <h2>Library: <%= @library.name %> </h2>
+
+<h2>Authors</h2>
+<% @book.authors.each do |author| %>
+  <%= author.name %>
+<% end %>
