FeatTest: Setup test for average age of author

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,5 +5,7 @@
 
 <h2>Authors</h2>
 <% @book.authors.each do |author| %>
-  <%= author.name %>
+  <p><%= author.name %></p>
 <% end %>
+
+<h2>Average Age of Authors</h2>
