resume, user story 2 tests pass

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,12 @@
   </div>
 <% end %>
 
+<h3>Libraries name</h3>
 <div id="book-library">
-  <h3>Libraries name</h3>
   <%= @book.library.name %>
+</div>
+
+<h3>Average authors age</h3>
+<div id="average-age">
+  <%= @book.average_age %>
 </div>
