story_2: I was so lost in the beginning and im sure my code is sloppy

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <p>Book Show Page</p>
 <h1>Title: <%= @book.title %></h1>
 <h2>Genre: <%= @book.genre %></h2>
-<h2>Library: <%= @library.name %> </h2>
+<h2>Library: <%= @book.library.name %> </h2>
 
 <h2>Authors</h2>
 <% @book.authors.each do |author| %>
@@ -9,3 +9,4 @@
 <% end %>
 
 <h2>Average Age of Authors</h2>
+<%= @book.avg_authors_age %>
