Finish user story 2

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,3 +4,4 @@ Genre: <%= @book.genre %>
   <%= "Author: #{author.name}" %>
 <% end %>
 Found at: <%= @book.library.name %>
+<%= "Average Age of Authors: #{@book.authors.average_age}" %>
