Finish user story 3

--- a/app/views/library_authors/index.html.erb
+++ b/app/views/library_authors/index.html.erb
@@ -1,1 +1,4 @@
-Here I am!
+<h1><%= "Authors found at #{@library.name}"  %></h1>
+<% @library.authors.order(:name).distinct.each do |author| %>
+  <p><%= author.name %></p>
+<% end %>
