--- a/app/views/library_authors/index.html.erb
+++ b/app/views/library_authors/index.html.erb
@@ -1,4 +1,4 @@
 <h1><%= "Authors found at #{@library.name}"  %></h1>
-<% @library.authors.order(:name).distinct.each do |author| %>
+<% @library.authors.list_of_authors.each do |author| %>
   <p><%= author.name %></p>
 <% end %>
