feat: Book show page has authors and library

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,13 @@
 <h1><%= @book.title  %></h1>
 <h3><%= @book.genre %></h3>
+<div id="authors">
+    <ul> Authors: 
+         <% @book.authors.each do |author| %>
+            <li>
+                <%= author.name  %>
+            </li>
+            <% end %>
+    </ul>
+
+</div>
+Library: <%= @book.library.name  %>
