feat: book show page has authors average age

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,6 +9,8 @@
             </li>
             <% end %>
     </ul>
-
+    <br>
+    <hr>
+Average age: <%= @book.average_age  %>
 </div>
 Library: <%= @book.library.name  %>
