--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,4 +6,5 @@
 <%= author.name %>
 <%= author.age %>
 <% end %>
+<p>Average author age: <%= @book.average_author_age %></p>
 <p>Library: <%= @book.library.name %></p>
