feat: add link to library author index page and display unique list of authors, complete user story 3

--- a/app/views/library_authors/index.html.erb
+++ b/app/views/library_authors/index.html.erb
@@ -1,5 +1,3 @@
-<% @library.books.each do |book| %>
-  <% book.authors.each do |author| %>
-  <p> <%= author.name %> </p>
-  <% end %>
+<% @library.unique_author_list.each do |author| %>
+  <p> <%= author %> </p>
 <% end %>
