--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,5 +7,7 @@
     <p><strong><%= author.name %></strong></p>
   <% end %>
 
+  <p><strong>Authors Average Age: <%= author.avg_age_of_authors %></strong></p>
+
   <p><h2>Available at: <%= @book.library.name %></h2></p>
 </div>
