--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,3 +1,3 @@
 <h1> <%= @lib.name %> Library </h1>
 
-<%= link_to "#{@lib.name}'s Authors", "/libraries/#{@lib.id}/authors" %>
+<%= link_to "#{@lib.name}'s Authors", library_authors_path(@lib) %>
